--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "better-npm-run": "0.0.15",
     "express": "4.15.3",
     "npm-run-all": "4.0.2",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
     "serve-favicon": "2.4.3"
   },
   "devDependencies": {
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-preset-env": "1.6.0",
+    "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
