--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-runtime": "6.23.0",
     "better-npm-run": "0.0.15",
     "express": "4.15.3",
     "isomorphic-fetch": "2.2.1",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
