--- a/package.json
+++ b/package.json
@@ -33,13 +33,23 @@
   },
   "devDependencies": {
     "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-2": "6.24.1",
+    "eslint": "4.2.0",
+    "eslint-config-react-app": "1.0.5",
+    "eslint-plugin-flowtype": "2.34.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
