--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "serve-favicon": "2.4.3"
   },
   "devDependencies": {
+    "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.1",
@@ -40,12 +41,19 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-2": "6.24.1",
+    "css-loader": "0.28.4",
     "eslint": "4.2.0",
     "eslint-config-react-app": "1.0.5",
     "eslint-plugin-flowtype": "2.34.1",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
+    "file-loader": "0.11.2",
+    "node-sass": "4.5.3",
+    "postcss-loader": "2.0.6",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "url-loader": "0.5.9",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
   },
