--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev-server start-csr-dev",
     "dev-server": "webpack-dev-server --config config/webpack.dev.js",
-    "start-csr-dev": "better-npm-run start-csr-dev"
+    "start-csr-dev": "better-npm-run start-csr-dev",
+    "clean": "rimraf ./public/build",
+    "prebuild": "npm run clean",
+    "build": "npm-run-all build-client",
+    "build-client": "better-npm-run build-client"
   },
   "betterScripts": {
     "start-csr-dev": {
       "command": "node ./server/index.js",
       "env": {
         "NODE_ENV": "development"
+      }
+    },
+    "build-client": {
+      "command": "webpack --config config/webpack.prod.js --progress --display-optimization-bailout",
+      "env": {
+        "NODE_ENV": "production"
       }
     }
   },
@@ -32,10 +42,14 @@
     "serve-favicon": "2.4.3"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "3.5.1",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.1",
+    "babel-plugin-transform-react-constant-elements": "6.23.0",
+    "babel-plugin-transform-react-inline-elements": "6.22.0",
+    "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
@@ -48,9 +62,11 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.6",
+    "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
