--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "clean": "rimraf ./public/build",
     "prebuild": "npm run clean",
     "build": "npm-run-all build-client",
-    "build-client": "better-npm-run build-client"
+    "build-client": "better-npm-run build-client",
+    "start": "better-npm-run start-csr-prod"
   },
   "betterScripts": {
     "start-csr-dev": {
       "command": "node ./server/index.js",
       "env": {
         "NODE_ENV": "development"
+      }
+    },
+    "start-csr-prod": {
+      "command": "node ./server/index.js",
+      "env": {
+        "NODE_ENV": "production"
       }
     },
     "build-client": {
@@ -32,6 +39,7 @@
   "dependencies": {
     "babel-runtime": "6.23.0",
     "better-npm-run": "0.0.15",
+    "compression": "1.6.2",
     "express": "4.15.3",
     "isomorphic-fetch": "2.2.1",
     "npm-run-all": "4.0.2",
