--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "promise": "8.0.0",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-router": "3.0.5",
     "serve-favicon": "2.4.3"
   },
   "devDependencies": {
