--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start-csr-dev": "better-npm-run start-csr-dev",
     "clean": "rimraf ./public/build",
     "prebuild": "npm run clean",
-    "build": "npm-run-all build-client",
+    "build": "npm-run-all build-client build-server",
     "build-client": "better-npm-run build-client",
-    "start": "better-npm-run start-csr-prod"
+    "build-server": "better-npm-run build-server",
+    "start": "better-npm-run start-csr-prod",
+    "start-ssr": "better-npm-run start-ssr-prod"
   },
   "betterScripts": {
     "start-csr-dev": {
@@ -26,8 +28,21 @@
         "NODE_ENV": "production"
       }
     },
+    "start-ssr-prod": {
+      "command": "node ./server/index.js",
+      "env": {
+        "NODE_ENV": "production",
+        "SSR": 1
+      }
+    },
     "build-client": {
       "command": "webpack --config config/webpack.prod.js --progress --display-optimization-bailout",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    },
+    "build-server": {
+      "command": "webpack --config config/webpack.server.js --progress --display-optimization-bailout",
       "env": {
         "NODE_ENV": "production"
       }
@@ -80,7 +95,8 @@
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
     "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack-dev-server": "2.5.1",
+    "webpack-node-externals": "1.6.0"
   },
   "eslintConfig": {
     "extends": "react-app"
