SSR + Code Splitting with requested chunk in initial html

--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-router": "3.0.5",
-    "serve-favicon": "2.4.3"
+    "react-universal-component": "1.2.1",
+    "serve-favicon": "2.4.3",
+    "webpack-flush-chunks": "1.1.10"
   },
   "devDependencies": {
     "assets-webpack-plugin": "3.5.1",
@@ -86,15 +88,17 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
+    "extract-css-chunks-webpack-plugin": "2.0.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.6",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
+    "stats-webpack-plugin": "0.6.1",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
-    "webpack": "3.1.0",
+    "webpack": "3.2.0",
     "webpack-dev-server": "2.5.1",
     "webpack-node-externals": "1.6.0"
   },
