--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "promise": "8.0.0",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-universal-component": "1.2.1",
     "redux": "3.7.1",
