--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-universal-component": "1.2.1",
     "redux": "3.7.1",
     "redux-promise-middleware": "4.3.0",
+    "serialize-javascript": "1.3.0",
     "serve-favicon": "2.4.3",
     "webpack-flush-chunks": "1.1.10"
   },
