--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-router": "3.0.5",
     "react-universal-component": "1.2.1",
     "redux": "3.7.1",
+    "redux-promise-middleware": "4.3.0",
     "serve-favicon": "2.4.3",
     "webpack-flush-chunks": "1.1.10"
   },
