--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "npm-run-all": "4.0.2",
     "object-assign": "4.1.1",
     "promise": "8.0.0",
+    "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
