--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "better-npm-run": "0.0.15",
     "compression": "1.6.2",
     "express": "4.15.3",
+    "http-proxy-middleware": "0.17.4",
     "isomorphic-fetch": "2.2.1",
     "npm-run-all": "4.0.2",
     "object-assign": "4.1.1",
