--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "promise": "8.0.0",
     "prop-types": "15.5.10",
     "react": "15.6.1",
+    "react-apollo": "1.4.3",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
