--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start-csr-dev": "better-npm-run start-csr-dev",
     "clean": "rimraf ./public/build",
     "prebuild": "npm run clean",
-    "build": "npm-run-all build-client build-server",
+    "build": "npm-run-all relay-compiler build-client build-server",
     "build-client": "better-npm-run build-client",
     "build-server": "better-npm-run build-server",
     "start": "better-npm-run start-csr-prod",
-    "start-ssr": "better-npm-run start-ssr-prod"
+    "start-ssr": "better-npm-run start-ssr-prod",
+    "relay-compiler": "relay-compiler --src web --schema schema.graphql"
   },
   "betterScripts": {
     "start-csr-dev": {
@@ -52,10 +53,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-relay": "1.1.0",
     "babel-runtime": "6.23.0",
     "better-npm-run": "0.0.15",
     "compression": "1.6.2",
     "express": "4.15.3",
+    "farce": "0.2.1",
+    "found": "0.3.2",
+    "found-relay": "0.3.0-alpha.4",
     "http-proxy-middleware": "0.17.4",
     "isomorphic-fetch": "2.2.1",
     "npm-run-all": "4.0.2",
@@ -66,10 +71,13 @@
     "react-apollo": "1.4.3",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
+    "react-relay": "1.1.0",
     "react-router": "3.0.5",
     "react-universal-component": "1.2.1",
     "redux": "3.7.1",
     "redux-promise-middleware": "4.3.0",
+    "relay-compiler": "1.1.0",
+    "relay-runtime": "1.1.0",
     "serialize-javascript": "1.3.0",
     "serve-favicon": "2.4.3",
     "webpack-flush-chunks": "1.1.10"
