--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.1",
+    "babel-plugin-dual-import": "1.1.1",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-inline-elements": "6.22.0",
     "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
