--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "found-relay": "0.3.0-alpha.4",
     "http-proxy-middleware": "0.17.4",
     "isomorphic-fetch": "2.2.1",
+    "memory-cache": "0.2.0",
     "npm-run-all": "4.0.2",
     "object-assign": "4.1.1",
     "promise": "8.0.0",
